[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skl_mindforge"
version = "3.0.2"
authors = [
  { name="Shreeman Iyer", email="your-email@example.com" },
]
description = "Lexeme V3 Ultra PRO: Bit-Perfect Technical Tokenizer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tokenizers>=0.13.0",
]

[tool.setuptools.package-data]
"skl_mindforge" = ["*.json"]
